syntax = "proto3";

package main;

option go_package = "/proto/gen;mainpb";

service Calculate {
    rpc Add (AddRequest) returns (AddResponse);
    rpc GenerateFibonacchi (FibonacchiRequest) returns (stream FibonacchiResponse);
    rpc SendNumbers (stream SendRequest) returns (SendResponse);
    rpc Chat (stream ChatMessage) returns (stream ChatMessage);
}

message ChatMessage {
    string text = 1;
}

message SendRequest {
    int32 number = 1;
}

message SendResponse {
    int32 sum = 2;

}

message AddRequest {
    int32 a = 1;
    int32 b = 2;
}

message AddResponse {
    int32 result = 1;
}

message FibonacchiRequest {
    int32 n = 1;
}

message FibonacchiResponse {
    int32 number = 1 ;
}
